Add by Array sucess on Mon to Fri

--- a/TERM01/ToDo.html
+++ b/TERM01/ToDo.html
@@ -52,7 +52,7 @@
 
   			<section id="middleBar_fri" class="middle">
   				<section class="middleTop"><b>Fri</b></section>
-  				<section class="displayArea_Fri"></section>
+  				<section class="displayArea_fri"></section>
   			</section>
 
       </main>
