This is Array Element

--- a/TERM01/ToDo.html
+++ b/TERM01/ToDo.html
@@ -80,8 +80,14 @@
     </div>
   </article>
 
-
-
+  <!-- 추가될 item, 저장은 displayArea에
+  <div id="divItem" style="display:none">
+    <div class="remove">
+      <span onclick="removeItem(this)"></span>
+    </div>
+    <div class="itemName"></div>
+  </div>
+!-->
 
   </body>
 </html>
