--- a/TERM01/ToDo.html
+++ b/TERM01/ToDo.html
@@ -9,8 +9,8 @@
   <body>
     <article>
       <header>
-        <button id="button_AddToDo" onclick="openModal()"> Add ToDo</button>
-        <form id="searchForm"action="ToDo.html" method="post">
+        <button id="button_AddToDo" onclick="openAddModal()"> Add ToDo</button>
+        <form id="searchForm" action="ToDo.html" method="post">
           <select class="formInner" id="selectDay" name="searchDay">
             <option value="" disabled selected>day</option>
             <option value="monday">Monday</option>
@@ -58,12 +58,13 @@
       </main>
 
 
-      <div id="MyModal" class="modal">
+      <section id="addModal" class="modal">
       <!-- Modal content !-->
-        <div class="modal-content">
-          <span class="close" onclick="closeModal()">&times;</span>
-          <form id="form_inModal" action="" method="post">
-            <select class="formInner_inModal" name="addDay">
+        <section class="modal-content">
+          <img class="close" src="img/delete.png" onclick="closeAddModal()" alt="삐빅!오류입니다">
+          <!-- <span class="close" onclick="closeModal()">&times;</span>!-->
+          <form class="form_inAddModal" action="" method="post">
+            <select class="formInner_inAddModal" name="addDay">
               <option value="" disabled selected>day</option>
               <option value="monday">Monday</option>
               <option value="tuesday">Tuesday</option>
@@ -71,13 +72,32 @@
               <option value="thursday">Thursday</option>
               <option value="friday">Friday</option>
             </select>
-            <input class="formInner_inModal" type="text" name="addItemName" placeholder="Item Name" >
-            <textarea class="formInner_inModal" name="addItemContents" rows="8" cols="80" placeholder="Item Contents"></textarea>
+            <input class="formInner_inAddModal" type="text" name="addItemName" placeholder="Item Name" >
+            <textarea class="formInner_inAddModal" name="addItemContents" rows="8" cols="80" placeholder="Item Contents"></textarea>
             <input class="button_Done" type="button" name="" value="Add" onclick="addItem()">
           </form>
+        </section>
+    </section>
 
-        </div>
-    </div>
+    <section id="modifyModal" class="modal">
+    <!-- Modal content !-->
+      <section class="modal-content">
+        <img class="close" src="img/delete.png" onclick="closeModifyModal()" alt="삐빅!오류입니다">
+        <!-- <span class="close" onclick="closeModal()">&times;</span>!-->
+        <form class="form_inModifyModal" action="" method="post">
+          <select class="formInner_inModifyModal" value="무엇?">
+            <option value="monday">Monday</option>
+            <option value="tuesday">Tuesday</option>
+            <option value="wednesday">Wednesday</option>
+            <option value="thursday">Thursday</option>
+            <option value="friday">Friday</option>
+          </select>
+          <input class="formInner_inModifyModal" type="text" name="addItemName" placeholder="Item Name" >
+          <textarea class="formInner_inModifyModal" name="addItemContents" rows="8" cols="80" placeholder="Item Contents"></textarea>
+          <input class="button_Done" type="button" name="" value="Done" onclick=""> <!--온클릭에 modify메소드 넣어야함-->
+        </form>
+      </section>
+  </section>
   </article>
 
   <!-- 추가될 item, 저장은 displayArea에
