Modify Function success

--- a/TERM01/ToDo.html
+++ b/TERM01/ToDo.html
@@ -95,7 +95,7 @@
           <input class = "formInner_inModifyModal" type="text" name="priority" >
           <input class = "formInner_inModifyModal" type="text" name="itemName" >
           <textarea class="formInner_inModifyModal" name="addItemContents" rows="6" cols="80" placeholder="Item Contents"></textarea>
-          <input class="button_Done" type="button" name="" value="Done" onclick=""> <!--온클릭에 modify메소드 넣어야함-->
+          <input class="button_Done" type="button" name="" value="Done" onclick="modifyItem(this)"> <!--온클릭에 modify메소드 넣어야함-->
         </form>
       </section>
   </section>
